Solve 06-flex-layout - This solution centers the content with `text-align: center`, no style applied directly to `content` selector.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,11 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -16,6 +21,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+
+  padding: 10px;
 }
 
 input {
@@ -24,4 +31,37 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+
+
+a {
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: #555;
+}
+
+ul {
+  /* this removes the bullets */
+  list-style-type: none;
+  padding: 0;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  justify-content: space-between;
+  gap: 18px;
+  /* border: 1px solid red; */
 }
